--- a/learn-certs-pr/courses/ms-040t00.yml
+++ b/learn-certs-pr/courses/ms-040t00.yml
@@ -8,23 +8,23 @@ courseNumber: 'MS-040T00-A'
 hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Настройка сайтов SharePoint
-- skill: Управление ограничениями хранилищ сайтов
-- skill: Развертывание клиента синхронизации OneDrive
-- skill: Использовать групповую политику для управления клиентскими настройками синхронизации OneDrive
-- skill: Управление внешним обменом данными в Microsoft SharePoint и OneDrive
-- skill: Настроить свойства профиля пользователя
-- skill: Управление аудиторией
-- skill: Использование App Catalog для управления пользовательскими приложениями
-- skill: Создавать и управлять группами терминов, наборами терминов и терминами
-- skill: Описание разницы между современным и классическим поиском
+- skill: Настройка сайтов SharePoint.
+- skill: Управление ограничениями хранилищ сайтов.
+- skill: Развертывание клиента синхронизации OneDrive.
+- skill: Использовать групповую политику для управления клиентскими настройками синхронизации OneDrive.
+- skill: Управление внешним обменом данными в Microsoft SharePoint и OneDrive.
+- skill: Настроить свойства профиля пользователя.
+- skill: Управление аудиторией.
+- skill: Использование App Catalog для управления пользовательскими приложениями.
+- skill: Создавать и управлять группами терминов, наборами терминов и терминами.
+- skill: Описание разницы между современным и классическим поиском.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
 levels:
 - intermediate
 roles:
-- developer
+- administrator
 products:
 - m365
 summary: |-
@@ -36,7 +36,7 @@ prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Хорошее знание базовый опыт работы со службами Microsoft 365.
   - Иметь хорошее понимание общих ИТ-практик, включая использование PowerShell.
-  - Базовое понимание Active Directory и Azure AD
+  - Базовое понимание Active Directory и Azure AD.
   - Базовое понимание управления мобильными устройствами и альтернативными операционными системами (Android и macOS).
 outlineSection: |-
   ### Модуль 1&#58; Планирование и настройка сайтов SharePoint
@@ -84,7 +84,7 @@ outlineSection: |-
   ### Модуль 4&#58; Управление профилями пользователей и приложениями
   Этот модуль о профиле пользователя и настройках в Microsoft SharePoint. В нем рассматриваются вопросы управления профилями пользователей в Microsoft SharePoint. Также описывается, как использовать App Catalog, чтобы сделать пользовательские бизнес-приложения доступными для вашего SharePoint в Microsoft 365.
   #### Уроки
-  - Управление профилями пользователей
+  - Manage User Profiles
   - Управление приложениями
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -93,7 +93,7 @@ outlineSection: |-
   - Описывать, как использовать App Catalog для управления пользовательскими приложениями
 
 
-  ### Модуль 5&#58; Планирование и настройка управляемых метаданных и служб Business Connectivity 
+  ### Модуль 5&#58; Планирование и настройка управляемых метаданных и служб Business Connectivity
   Этот модуль посвящен управляемым метаданным и службам Business Connectivity. В нем представлены концепции управляемых метаданных, а также процесс импорта наборов терминов. Также описывается, как управлять службами Business Connectivity Services и создавать внешний список.
   #### Уроки
   - Планирование и настройка управляемых метаданных
@@ -101,9 +101,9 @@ outlineSection: |-
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описывать функции управляемых метаданных
-  - Создавать и управлять группами терминов, наборами терминов и терминами.
+  - Создавать и управлять группами терминов, наборами терминов и терминами
   - Объяснять ключевые компоненты модели BDC
-  - Описывать архитектуру высокого уровня BCS.
+  - Описывать архитектуру высокого уровня BCS
   - Объяснять цель Службы Secure Store
 
 
@@ -114,7 +114,7 @@ outlineSection: |-
   - Настройка поиска
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Описание разницы между современным и классическим поиском.
+  - Описание разницы между современным и классическим поиском
   - Описывать управление схемой поиска
   - Объяснять использование и развертывание правил запросов
   - Объяснять использование и развертывание источника результатов
