--- a/learn-certs-pr/courses/pl-900t00.yml
+++ b/learn-certs-pr/courses/pl-900t00.yml
@@ -12,8 +12,8 @@ skillsGained:
 - skill: 'Описание компонентов Power Platform: Общая служба данных, коннекторы и AI Builder'
 - skill: Описание кросс-облачных сценариев для M365, Dynamics 365, Microsoft Azure и сторонних служб
 - skill: Определение преимуществ и возможностей Power Platform
-- skill: Определение основных функциональных возможностей и ценность для бизнеса.
-- skill: Реализация простых решений с помощью приложений Microsoft Automate, Power BI и Power.
+- skill: Определение основных функциональных возможностей и ценность для бизнеса
+- skill: Реализация простых решений с помощью приложений Microsoft Automate, Power BI и Power
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -26,7 +26,7 @@ products:
 exams:
 - uid: exam.pl-900
 summary: |-
-  Узнайте о ценности для бизнеса и возможностях продукта Power Platform. Научитесь создавать простой PowerApp, подключать данные к CDS, создавать панель мониторинга Power BI и автоматизировать процессы с помощью Microsoft Flow.
+  Узнайте о ценности для бизнеса и возможностях продукта Power Platform. Создавайте простое приложение Power App, подключайте данные к Common Data Service, создавайте панель мониторинга Power BI и автоматизируйте процесс с помощью Power Automate.
 
   #### Профиль аудитории
   Кандидатами на этот экзамен являются пользователи, которые стремятся повысить производительность труда, автоматизируя бизнес-процессы, анализируя данные для получения бизнес-аналитики и действуя более эффективно, создавая простые приложения.
@@ -42,33 +42,16 @@ outlineSection: |-
   После завершения этого модуля студенты смогут следующее&#58;
   - Определите, когда использовать каждое компонентное приложение Power Platform для создания бизнес-решений.
   - Узнайте, как использовать Power Platform для создания бизнес-решений.
-  - Изучите компоненты и возможности Power Platform
-
-  ### Модуль 2&#58; Начните использовать приложения Power Apps
-  Узнайте о значении и возможностях PowerApps и о том, как другие организации используют эту технологию для создания простых приложений для своего бизнеса.
-  #### Уроки
-  - Обзор приложений Power Apps
-  - Как создать решение для приложения
-  - Создать приложение Staff Canvas
-  - Завершите приложение
-
-  #### Лабораторная &#58; Как создать базовое приложение Canvas 2
-  - Создать приложение Security Canvas
-
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Узнайте, как другие организации оцифровывают свои процессы с помощью Power Apps
-  - Посмотрите на Power Apps в действии и изучайте варианты создания своего первого приложения
-  - Узнайте о том, что Power Apps и его ценность для бизнеса
+  - Изучите компоненты и возможности Power Platform.
 
 
-  ### Модуль 3&#58; Введение в общую службу данных Common Data Service
+  ### Модуль 2&#58; Введение в общую службу данных Common Data Service
   Служба общих данных позволяет вам углубляться в мощные, масштабируемые решения для обработки данных в облаке. Узнайте, что делает Common Data Service привлекательным и как она может работать с Power Platform для создания уникальных и эффективных бизнес-решений.
   #### Уроки
   - Обзор общей службы данных
   - Краткое содержание модуля
 
-
-  #### Лабораторная &#58; Моделирование данных
+  #### Лабораторная&#58; Моделирование данных
   - Создайте среду и решение
   - Создайте сущности и отношения
   - Импортируйте данные
@@ -79,14 +62,36 @@ outlineSection: |-
   - Объясните, какие среды, объекты, поля и отношения находятся в общей службе данных
 
 
+  ### Модуль 3&#58; Начните использовать приложения Power Apps
+  Узнайте о ценности и возможностях Power Apps, а также о том, как другие организации используют эту технологию для создания простых приложений для своего бизнеса.
+  #### Уроки
+  - Обзор приложений Power Apps
+  - Как создать решение для приложения
+
+  #### Лабораторная работа&#58; Canvas app, часть 1
+  - Создать приложение Staff Canvas
+  - Завершите приложение
+
+  #### Лабораторная работа&#58; Canvas app, часть 2
+  - Создать приложение Security Canvas
+
+  #### Лабораторная работа&#58; Приложение на основе модели
+  - Настройка представлений и форм
+  - Создание приложения на основе модели
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Узнайте, как другие организации оцифровывают свои процессы с помощью Power Apps
+  - Посмотрите на Power Apps в действии и изучайте варианты создания своего первого приложения
+  - Узнайте о том, что Power Apps и его ценность для бизнеса
+
+
   ### Модуль 4&#58; Начните использовать приложения Power Automate
   Узнайте, как пользователи могут использовать Power Automate для повышения эффективности и производительности бизнеса.
   #### Уроки
   - Обзор Power Automate
   - Как построить автоматизированное решение
 
-
-  #### Лабораторная &#58; Создайте простой поток
+  #### Лабораторная работа&#58; Power Automate
   - Создайте поток уведомлений о посещениях
   - Создайте поток развертки безопасности
 
@@ -97,13 +102,14 @@ outlineSection: |-
 
 
   ### Модуль 5&#58; Начните использовать приложения Power BI
-  Узнайте, как организации могут использовать Power BI для простой очистки, отображения и понимания данных для обеспечения  принятия более обоснованных решений.
+  Узнайте, как организации могут использовать Power BI для простой очистки, отображения и понимания данных для обеспечения принятия более обоснованных решений.
   #### Уроки
   - Обзор Power BI
   - Как создать простую панель инструментов
 
-
-  #### Лабораторная &#58; Создайте отчёт Power BI
+  #### Лабораторная работа&#58; Power BI
+  - Создание отчета Power BI
+  - Создание панели наблюдения Power BI
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Посмотрите, как Power BI работает и выглядит с точки зрения пользователя
