--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -7,8 +7,8 @@ uid: exam.az-500
 displayName: AZ-500
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 29 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 29 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен должны обладать специальными знаниями в области управления безопасностью и защиты от угроз, управления идентификацией и доступом, а также защиты данных, приложений и сетей в облачной и гибридной средах как части комплексной инфраструктуры.
@@ -35,11 +35,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 29 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Управление идентификацией и доступом (20-25%)
-- Внедрение защиты платформы (35-40%)
-- Управление операциями безопасности (15-20%)
-- Защита данных и приложений (30-35%)
+- Содержание этого экзамена было обновлено 29 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Управление идентификацией и доступом (30-35%)
+- Внедрение защиты платформы (15-20%)
+- Управление операциями безопасности (25-30%)
+- Защита данных и приложений (20-25%)
 roles:
 - security-engineer
 products:
