--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -34,10 +34,13 @@ locales:
 - ja
 - zh-cn
 - ko
+- es
+- de
+- fr
 levels:
 - beginner
 skills:
-- 'Содержание этого экзамена было обновлено 28 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.'
+- Содержание этого экзамена было обновлено 28 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Описание облачных концепций (15-20%)
 - Описание основных служб Azure (30-35%)
 - Описание безопасности, конфиденциальности, соответствия и доверия (25-30%)
