--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -7,25 +7,26 @@ uid: exam.mb-240
 displayName: MB-240
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 19 мая 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются функциональные консультанты Microsoft Dynamics 365 по привлечению клиентов с опытом в обслуживании на местах. Кандидаты отвечают за реализацию решений, управляющих ресурсами, которые завершают жизненный цикл обслуживания на местах.
 
-  Кандидаты осуществляют процессы обслуживания на местах, разработанные в сотрудничестве с внутренними и внешними командами специалистов. Это сотрудничество включает в себя настройку стандартных областей администрирования приложения для обслуживания на местах, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных необходимых изменений по запрсоу. Кандидаты отвечают за настройку и развертывание приложения обслуживания на местах совместно с основным приложением обслуживания клиентов.
+  Кандидаты осуществляют процессы обслуживания на местах, разработанные в сотрудничестве с внутренними и внешними командами специалистов. Это сотрудничество включает в себя настройку стандартных областей администрирования приложения для обслуживания на местах, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных необходимых изменений по запросу. Кандидаты отвечают за настройку и развертывание приложения обслуживания на местах совместно с основным приложением обслуживания клиентов.
 
   Кандидаты должны иметь знания о настройке и изменении компонентов приложения обслуживания на местах, включая настройку служб, ресурсов, характеристик, инцидентов, интеграции запасов, соглашения об обслуживании, планирование ресурсов, рабочие задания, задачи обслуживания, роли пользователей при обслуживании на местах, настройки обслуживания на местах, решение Connected Field Service (IoT) и настройка мобильного приложения обслуживания на местах.
 subTitle: 'Данный экзамен позволяет оценить вашу способность выполнять перечисленные ниже технические задачи: настройка приложений обслуживания на местах; управление заказами на работу; планирование и диспетчеризация заказов на работу; управление мобильностью обслуживания на местах; управление запасами и закупками; управление активами и соглашениями.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
+practiceTestUrl: https://in.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 19 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Настройка приложений обслуживания на местах (20-25%)
 - Управление заказами на выполнение работ (15-20%)
 - Планирование и диспетчеризации заказов на выполнение работ (20-25%)
@@ -35,7 +36,7 @@ skills:
 roles:
 - functional-consultant
 products:
-- dynamics
+- dynamics-365
 - dynamics-field-service
 exams:
 - uid: exam.mb-200
@@ -49,14 +50,14 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-field-service
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I72
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Ft
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
