--- a/learn-certs-pr/exams/mb-800.yml
+++ b/learn-certs-pr/exams/mb-800.yml
@@ -6,19 +6,29 @@ metadata:
 uid: exam.mb-800
 displayName: MB-800
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Functional Consultant, основное приложение Dynamics 365 Business Central, внедряет и настраивает приложение Business Central, включая настройку основных функций приложения, модулей и миграцию данных в Business Central. Консультанты совместно с командой внедрения настраивают пользовательский интерфейс, чтобы обеспечить бизнес управляемостью и простотой навигации. Они настраивают ролевые центры, включая адаптацию представлений, подсказок, плитки с действиями, отчеты, диаграммы и расширения Business Central с использованием компонентов Power Platform.
+  Кандидатами на этот экзамен являются Functional Consultants, которые внедряют основные процессы настройки приложений для малого и среднего бизнеса. Они внедряют и настраивают приложение Dynamics 365 Business Central, включая настройку основных функций и модулей приложения и перенос данных в Business Central.
 
-  <div style='font-weight&#58; bold;'><br/>Примечание&#58; Этот экзамен будет доступен в сентябре 2020 года.</div>
-subTitle: 'Этот экзамен будет доступен в сентябре 2020 года. Этот экзамен оценивает вашу способность выполнять следующие задачи: настройка Business Central, настройка финансовых показателей, настройка продаж и закупок, настройка операций и использование компонентов Power Platform.'
+  Кандидаты на этот экзамен должны уметь запускать пользовательский интерфейс в сотрудничестве с группой внедрения для обеспечения управляемости и простоты навигации. Они настраивают ролевые центры, включая адаптацию представлений, подсказок, плитки с действиями, отчеты, диаграммы и расширения Business Central с использованием компонентов Power Platform.
+
+  Кандидаты должны иметь прикладные знания об удовлетворении потребностей пользователей с помощью приложения Business Central, включая базовые знания в области финансового управления, продаж, закупок и запасов.
+
+  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Business Central. Они понимают роль взаимосвязи Business Central и набора приложений Dynamics 365.
+
+  <div><strong><br/>Примечание&#58; Этот экзамен станет доступен в октябре 2020 года.</strong></div>
+subTitle: 'Этот экзамен станет доступен в октябре 2020 года. Этот экзамен позволяет оценить вашу способность выполнять следующие задачи: настройка Business Central; настройка финансовых данных; настройка продаж и закупок; и выполнение операций Business Central.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSE
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Еще не доступно
+- Настройка Business Central (20-25%)
+- Настройка финансовых данных (25-30%)
+- Настройка продаж и закупок (10-15%)
+- Выполнение операций Business Central (30-35%)
 roles:
 - functional-consultant
 products:
