--- a/learn-certs-pr/exams/mo-200.yml
+++ b/learn-certs-pr/exams/mo-200.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.mo-200
 displayName: MO-200
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Это Экзамен охватывает способность создавать и редактировать рабочие книги с несколькими листами и использовать графические элементы для визуального представления данных. В качестве примеров книг можно привести профессионально оформленные сметы, финансовые балансы, диаграммы контроля производительности труда рабочей группы, накладные по заказам на продажу и журналы данных. Кандидаты должны продемонстрировать правильное применение основных функций Excel и выполнить задачи самостоятельно.
 subTitle: Экзамен оценивает знания основ создания листов и книг и работы с ними, создания ячеек и диапазонов, создания таблиц, применения формул и функций, а также создания диаграмм и объектов. Экзамен охватывает способность создавать и редактировать рабочие книги с несколькими листами и использовать графические элементы для визуального представления данных. В качестве примеров книг можно привести профессионально оформленные сметы, финансовые балансы, диаграммы контроля производительности труда рабочей группы, накладные по заказам на продажу и журналы данных.
@@ -26,6 +26,11 @@ locales:
 - pt-br
 - es
 - it
+- ru
+- ja
+- pl
+- el-gr
+- zh-cn
 levels:
 - intermediate
 skills:
