--- a/learn-certs-pr/exams/pl-100.yml
+++ b/learn-certs-pr/exams/pl-100.yml
@@ -5,7 +5,7 @@ metadata:
   description: 'Exam PL-100: Microsoft Power Platform App Maker (beta)'
 uid: exam.pl-100
 displayName: PL-100
-summary: "<div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>\r\n  \r\nПроизводители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты должны разбираться в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовый дизайн UX, анализ требований, анализ процессов и т. д.<br/><br/>\r\n\r\nРазработчики приложений создают и обеспечивают выполнение бизнес-процессов, структурирует цифровой сбор информации, повышает эффективность повторяемых задач и автоматизирует бизнес-процессы.\r\n\r\nРазработчики приложений используют инструменты Power Platform для решения бизнес-задач. Они могут иметь опыт работы с Visual Basic для приложений, сводными таблицами Excel, командами и другими инструментами. Они должны иметь базовое понимание моделей данных, пользовательского интерфейса и процессов. Разработчики приложений знают о возможностях и ограничениях доступных инструментов и понимают, как их применять.\r\n\r\nРазработчики приложений ориентированы на самостоятельную работу и на решение задач. Возможно они не проходили формальное обучение по ИТ, но им удобно использовать технологии для решения бизнес-задач и они настроены на личностный рост. Они понимают оперативную потребность и видят желаемый результат. Они подходят к проблемам с использованием поэтапных и итеративных стратегий.\r\n\r\n<div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href=\"/learn/certifications/certification-exams#participating-in-beta-exams\">ценности и важности бета-версий экзаменов</a>.</div>"
+summary: "<div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>\r\n  \r\nПроизводители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты должны разбираться в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовый дизайн UX, анализ требований, анализ процессов и т. д.<br/><br/>\r\n\r\nРазработчики приложений создают и обеспечивают выполнение бизнес-процессов, структурирует цифровой сбор информации, повышает эффективность повторяемых задач и автоматизирует бизнес-процессы.\r\n\r\nРазработчики приложений используют инструменты Power Platform для решения бизнес-задач. Они могут иметь опыт работы с Visual Basic для приложений, сводными таблицами Excel, командами и другими инструментами. Они должны иметь базовое понимание моделей данных, пользовательского интерфейса и процессов. Разработчики приложений знают о возможностях и ограничениях доступных инструментов и понимают, как их применять.\r\n\r\nРазработчики приложений ориентированы на самостоятельную работу и на решение задач. Возможно они не проходили формальное обучение по ИТ, но им удобно использовать технологии для решения бизнес-задач и они настроены на личностный рост. Они понимают оперативную потребность и видят желаемый результат. Они подходят к проблемам с использованием поэтапных и итеративных стратегий.\r\n\r\n<div><strong><br/>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзамена. Узнайте больше о <a href=\"/learn/certifications/certification-exams#participating-in-beta-exams\">ценности и важности бета-версий экзаменов</a>.</strong></div>"
 subTitle: 'Этот экзамен оценивает вашу способность выполнять следующие технические задачи: проектирование решений; создание решений; анализ данных; внедрение решений и управление ими.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wo07
@@ -20,8 +20,8 @@ levels:
 - intermediate
 skills:
 - Проектирование решений (10-15%)
-- Создание решений (50-55%)
-- Анализ данных (5-10%)
+- Создание решений (55-60%)
+- Анализ и визуализация данных (5-10%)
 - Внедрение решений и управление ими (15-20%)
 roles:
 - business-analyst
@@ -34,7 +34,7 @@ roles:
 - maker
 - technology-manager
 products:
-- dynamics
+- dynamics-365
 - office
 - office-access
 - office-excel
@@ -58,7 +58,6 @@ products:
 - power-platform
 - ai-builder
 - common-data-service
-- forms-pro
 - power-automate
 - power-bi
 - power-apps
@@ -79,12 +78,15 @@ relatedCertifications:
 - related:
     uid: certification.power-platform-app-maker
 resources:
+- title: Обучение для получения сертификата
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjG
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
