--- a/learn-certs-pr/exams/pl-200.yml
+++ b/learn-certs-pr/exams/pl-200.yml
@@ -6,25 +6,28 @@ metadata:
 uid: exam.pl-200
 displayName: PL-200
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Power Platform Functional Consultant отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решений и приложений Power Platform.
+  Кандидаты на этот экзамен должны уметь выполнять обнаружение, фиксировать требования, привлекать экспертов и заинтересованных лиц, определять требования и настраивать решения и приложения Power Platform. Они должны уметь создавать расширения приложений, настраиваемый пользовательский интерфейс, интеграцию систем, преобразование данных, настраиваемую автоматизацию процессов и настраиваемые визуализации.
 
-  Функциональный консультант внедряет компоненты решения, которые включают в себя доработку приложений, пользовательский интерфейс, системные интеграции, преобразования данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
+  Кандидаты уметь внедрять проекты, разработанные архитектором решения и в сотрудничестве с ним, а также стандарты, брендинг и артефакты, установленные разработчиками пользовательского интерфейса. Они проектируют интеграции для обеспечения бесшовной интеграции со сторонними приложениями и службами.
 
-  <div style='font-weight&#58; bold;'><br/>Примечание&#58; Этот экзамен станет доступен в октябре 2020 года.</div>
-subTitle: 'Этот экзамен станет доступен в октябре 2020 года. Этот экзамен позволит оценить вашу способность выполнять следующие технические задачи: настройка общей службы данных; создание приложения Power App; создание автоматизации с помощью Power Automate; настройка виртуальных агентов Power Virtual Agents; и создание визуализации с помощью Power BI.'
+  Кандидаты активно сотрудничают с членами группы обеспечения качества, чтобы гарантировать соответствие решений функциональным и нефункциональным требованиям. Они выявляют, создают и доставляют артефакты для упаковки и развертывания инженерам DevOps, а также проводят обучение по эксплуатации и обслуживанию администраторов Power Platform.
+
+  <div><strong><br/>Примечание&#58; Этот экзамен станет доступен в сентябре 2020 года.</strong></div>
+subTitle: 'Этот экзамен станет доступен в сентябре 2020 года. Этот экзамен позволяет оценить вашу способность выполнять следующие задачи: настройка Common Data Service; создание приложения с помощью Power Apps; создание Power Automate и управление им; внедрение чат-ботов Power Virtual Agents; и интеграция Power Apps с другими приложениями и службами.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CQVs
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Настройка общих служб данных
-- Создание Power App
-- Создание автоматизации с помощью Power Automate
-- Настройка виртуальных агентов Power Virtual Agents
-- Создание визуализации с помощью Power BI
+- Настройка общих служб данных (25-30%)
+- Создание приложений с помощью Power Apps (20-25%)
+- Создание и управление Power Automate (15-20%)
+- Внедрение чат-ботов Power Virtual Agents (10-15%)
+- Интеграция Power Apps с другими приложениями и службами (15-20%)
 roles:
 - business-analyst
 - developer
@@ -46,8 +49,8 @@ resources:
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
