--- a/learn-certs-pr/courses/az-400t00.yml
+++ b/learn-certs-pr/courses/az-400t00.yml
@@ -10,7 +10,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Планирование трансформаций с общими целями и сроками
 - skill: Выбор проекта и определение метрик проекта и KPI
-- skill: Создание команды и гибкой организационной структуры
+- skill: Создание команды и гибкой организации структуры
 - skill: Описание преимуществ использования контроля источников
 - skill: Миграция из TFVC в Git
 - skill: Scale Git для корпоративных DevOps
@@ -59,10 +59,10 @@ skillsGained:
 - skill: Настройка интеграции отчетов о сбоях для клиентских приложений
 - skill: Разработка панелей мониторинга и состояния
 - skill: Внедрение маршрутизации для данных отчета о сбоях для клиентских приложений
-- skill: Внедрение инструментов для отслеживания использования системы, функций и  потока
+- skill: Внедрение инструментов для отслеживания использования системы, функций и потока
 - skill: Интегрировать и настраивать системы тикетов с управлением работой команды разработчиков
 - skill: Реализация стратегии mobile DevOps
-- skill: Примять инфраструктуру и конфигурацию как принципы кода
+- skill: Примять инфраструктуру и конфигурацию как принципы кода.
 - skill: Развертывать и управлять инфраструктурой с использованием технологий автоматизации Microsoft, таких как шаблоны ARM, PowerShell и Azure CLI
 - skill: Описывать модели и службы развертывания, доступные в Azure
 - skill: Развертывать и настраивать управляемый кластер Kubernetes
@@ -110,7 +110,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Agile-планирование и управление портфелями с помощью Azure Boards
 
-  После завершения этого модуля студенты получат следующее&#58; 
+  После завершения этого модуля студенты смогут следующее&#58; 
   - Планирование трансформаций с общими целями и сроками
   - Выбор проекта и определение метрик проекта и KPI
   - Создание команды и гибкой организационной структуры
@@ -133,7 +133,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Управление версиями с помощью Git
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Описание преимуществ использования контроля источников 
   - Описание Azure Repos и GitHub
   - Миграция из TFVC в Git 
@@ -149,7 +149,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Проверка кода с запросами на включение кода
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Объяснение структурирования Git Repos 
   - Описание рабочих процессов Git branching
   - Использование запросов на включение кода для работы и проверки кода 
@@ -165,7 +165,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Обновление пакетов
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Рекомендации по инструментам и методам управления артефактами
   - Выделить общие пакеты для совместного использования и повторного использования
   - Миграция и консолидация артефактов
@@ -192,11 +192,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Интеграция внешнего управления источниками с Azure Pipelines
 
-  #### Лабораторная работа&#58; Интеграция Jenkins с конвейерами Azure
-
-  #### Лабораторная работа&#58; Развертывание мультиконтейнерного приложения
-
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Внедрение и управление инфраструктурой сборки
   - Объяснение роли и значения непрерывной интеграции
   - Реализация непрерывной интеграции с помощью Azure DevOps
@@ -212,8 +208,9 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Интеграция хранилища ключей Azure с DevOps Azure
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Управление настройками приложения и секретами
+  - Внедрение инструментов для управления безопасностью и соответствием в конвейере
 
 
   ### Модуль 7&#58; Управление качеством кода и политиками безопасности
@@ -223,7 +220,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Управление техническими задолженностями с помощью Azure DevOps и SonarCloud
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Управление качеством кода, включая&#58; техническую задолженность, SonarCloud и другие инструментальные решения
   - Управление политиками безопасности с открытым исходным кодом и OWASP
 
@@ -234,9 +231,9 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Модернизация существующих приложений ASP.NET с помощью Azure
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Реализация стратегии организации контейнеров, включая различия между контейнерами и виртуальными машинами, а также использование контейнеров микросервисами.
-  - Реализация контейнеров с помощью Docker
+  - Реализация контейнеров с помощью Docker.
 
 
   ### Модуль 9&#58; Управление версиями, безопасностью и соответствием артефактов
@@ -244,11 +241,11 @@ outlineSection: |-
   - Безопасность пакета
   - Программное обеспечение с открытым исходным кодом
   - Интеграция сканирования лицензий и уязвимостей
-  - Реализация стратегии управления версиями (Git Version) 
+  - Внедрение стратегии управления версиями 
 
   #### Лабораторная работа&#58; Управление безопасностью открытого кода и лицензией с помощью WhiteSource
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Проверка пакетов программного обеспечения с открытым исходным кодом на соответствие требованиям безопасности и лицензий в соответствии с корпоративными стандартами
   - Настройка конвейера сборки для доступа к безопасности пакета и рейтингу лицензии
   - Настройка безопасного доступа к фидам пакетов
@@ -266,7 +263,7 @@ outlineSection: |-
   - Выбор шаблона развертывания
   - Выбор правильного инструмента управления релизами 
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Различать релизы и развертывания
   - Определять компоненты конвейера релиза
   - Объяснять, что нужно учитывать при разработке стратегии релиза
@@ -295,7 +292,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Создание панели инструментов релиза
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Объяснять терминологию, используемую в Azure DevOps и других средствах управления релизом
   - Описывать задачи Build and Release, что они могут сделать, и некоторые доступные задачи развертывания
   - Классифицировать Agent, Agent Queue и Agent Pool
@@ -320,7 +317,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Управление флагами функций с помощью LaunchDarkly и Azure DevOps
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Описывать шаблоны развертывания
   - Реализация Blue Green Deployment
   - Реализация Canary Release
@@ -336,7 +333,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Мониторинг производительности приложения
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Настройка интеграции отчетов о сбоях для клиентских приложений
   - Разработка панелей мониторинга и состояния
   - Внедрение маршрутизации для данных отчета о сбоях для клиентских приложений
@@ -344,20 +341,7 @@ outlineSection: |-
   - Интегрировать и настраивать системы тикетов с управлением работой команды разработчиков
 
 
-  ### Модуль 14&#58; Реализация стратегии mobile DevOps
-  #### Уроки
-  - Введение в mobile DevOps
-  - Введение в Visual Studio App Center
-  - Управление наборами мобильных целевых устройств и группами рассылки
-  - Управление целевыми наборами тестовых устройств пользовательского (UI) интерфейса
-  - Предоставление тестера устройств для развертывания
-  - Создание публичных и частных групп рассылки 
-
-  После завершения этого модуля студенты получат следующее&#58;
-  - Реализация стратегии mobile DevOps
-
-
-  ### Модуль 15&#58; Инструменты Azure для инфраструктуры и конфигурации
+  ### Модуль 14&#58; Инструменты Azure для инфраструктуры и конфигурации
   #### Уроки
   - Инфраструктура как код и управление конфигурацией
   - Создание ресурсов Azure с использованием шаблонов ARM
@@ -369,36 +353,36 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Развертывания Azure с использованием шаблонов Resource Manager
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Примять инфраструктуру и конфигурацию как принципы кода
   - Развертывать и управлять инфраструктурой с использованием технологий автоматизации Microsoft, таких как шаблоны ARM, PowerShell и Azure CLI
 
 
-  ### Модуль 16&#58; Модели и службы развертывания Azure
+  ### Модуль 15&#58; Модели и службы развертывания Azure
   #### Уроки
   - Модели и опции развертывания
   - Службы Azure "Инфраструктура как услуга" (Infrastructure-as-a-Service, IaaS)
-  - Службы Azure "Платформа как услуга" (Platform-as-a-Service, PaaS);
+  - Службы Azure "Платформа как услуга" (Platform-as-a-Service, PaaS)
   - Бессерверные службы и службы HPC Computer
   - Azure Service Fabric 
 
-  #### Лабораторная работа&#58; автоматизация Azure - развертывание IaaS или PaaS
+  #### Лабораторная работа&#58; Развертывание приложения Dockerized Java в Azure Web App для контейнеров
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Описывать модели и службы развертывания, доступные в Azure
 
 
-  ### Модуль 17&#58; Создание и управление инфраструктурой службы Kubernetes
+  ### Модуль 16&#58; Создание и управление инфраструктурой службы Kubernetes
   #### Уроки
   - Служба Azure Kubernetes
 
   #### Лабораторная работа&#58; Развертывание мультиконтейнерного приложения в Azure Kubernetes Service
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Развертывать и настраивать управляемый кластер Kubernetes
 
 
-  ### Модуль 18&#58; Сторонние инфраструктуры как инструменты кода, доступные в Azure
+  ### Модуль 17&#58; Сторонние инфраструктуры как инструменты кода, доступные в Azure
   #### Уроки
   - Chef
   - Puppet
@@ -409,23 +393,23 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Автоматизация развертывания инфраструктуры в облаке с помощью Terraform и конвейеров Azure
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Развертывать и настраивать инфраструктуру с помощью сторонних инструментов и служб с Azure, таких как Chef, Puppet, Ansible, SaltStack и Terraform
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Развертывать и настраивать инфраструктуру с помощью сторонних инструментов и служб с Azure, таких как Chef, Puppet, Ansible, и Terraform
 
 
-  ### Модуль 19&#58; Реализация соответствия и безопасности в вашей инфраструктуре
+  ### Модуль 18&#58; Реализация соответствия и безопасности в вашей инфраструктуре
   #### Уроки
   - Принципы безопасности и соответствия с DevOps
   - Центр безопасности Azure 
 
   #### Лабораторная работа&#58; Внедрение безопасности и соответствия требованиям в конвейере Azure DevOps
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Определять инфраструктуру и стратегию конфигурации, а также соответствующий набор инструментов для конвейера релиза и инфраструктуры приложений
   - Реализовывать соответствие и безопасность инфраструктуры приложений
 
 
-  ### Модуль 20&#58; Рекомендации и разработка механизмов обратной связи системы
+  ### Модуль 19&#58; Рекомендации и разработка механизмов обратной связи системы
   #### Уроки
   - Внутренний цикл
   - Менталитет непрерывных экспериментов
@@ -435,7 +419,7 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Интеграция Azure DevOps и команд Teams
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Разработка способов измерения удовлетворенности конечных пользователей
   - Разрабатывать процессы сбора и анализа отзывов пользователей из внешних источников
   - Разработка маршрутизации для данных отчета о сбоях для клиентских приложений
@@ -443,7 +427,7 @@ outlineSection: |-
   - Рекомендации по инструментам для отслеживания пользования системы и функций
 
 
-  ### Модуль 21&#58; Оптимизация механизмов обратной связи
+  ### Модуль 20&#58; Оптимизация механизмов обратной связи
   #### Уроки
   - Инжиниринг надежности сайта
   - Анализ телеметрии для определения базовых показателей
@@ -451,8 +435,9 @@ outlineSection: |-
   - Анализ оповещений для определения базовых показателей
   - Безупречная ретроспектива и культура справедливости 
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После завершения этого модуля студенты смогут следующее&#58;
   - Анализ оповещений для определения базовых показателей
   - Анализ телеметрии для определения базовых показателей
   - Обзор сайтов в режиме реального времени и сбор отзывов пользователей о сбоях системы
   - Выполнение постоянной настройки для уменьшения количества бессмысленных или неактивные оповещений
+
