--- a/learn-certs-pr/courses/ms-050T00.yml
+++ b/learn-certs-pr/courses/ms-050T00.yml
@@ -8,34 +8,36 @@ courseNumber: 'MS-050T00-A'
 hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Описывать функцию MinRole в SharePoint 2019
-- skill: Описывать, как установить и настроить SharePoint 2019
-- skill: Описывать, как реализовать высокую доступность для SharePoint
-- skill: Подготавливать к работе экземпляр приложения-службы BDC
-- skill: Настраивать приложения-службы Secure Store
-- skill: Описывать, как настраивать личные сайты в SharePoint 2019
-- skill: Описывать доступные гибридные сценарии SharePoint
-- skill: Описывать требования для гибридной конфигурации SharePoint
-- skill: Планируйте гибрид SharePoint Server
-- skill: Планировать процесс миграции контента
-- skill: Описывать доступные ресурсы и инструменты для использования в процессе миграции
-- skill: Получение доступа к данным, подлежащим миграции, с помощью средства оценки миграции SharePoint (SMAT)
-- skill: Переносить контент в облако с помощью SharePoint Migration Tool (SPMT)
-- skill: Управлять и контролировать процесс миграции
+- skill: Описывать функцию MinRole в SharePoint 2019.
+- skill: Описывать, как установить и настроить SharePoint 2019.
+- skill: Описывать, как реализовать высокую доступность для SharePoint.
+- skill: Подготавливать к работе экземпляр приложения-службы BDC.
+- skill: Настраивать приложения-службы Secure Store.
+- skill: Описывать, как настраивать личные сайты в SharePoint 2019.
+- skill: Описывать доступные гибридные сценарии SharePoint.
+- skill: Описывать требования для гибридной конфигурации SharePoint.
+- skill: Планируйте гибрид SharePoint Server.
+- skill: Планировать процесс миграции содержимого
+- skill: Описывать доступные ресурсы и инструменты для использования в процессе миграции.
+- skill: Получение доступа к данным, подлежащим миграции, с помощью средства оценки миграции SharePoint (SMAT).
+- skill: Переносить содержимое в облако с помощью SharePoint Migration Tool (SPMT).
+- skill: Переносить содержимое в облако с помощью Migration Manager.
+- skill: Переносить содержимое в облако с помощью Mover.
+- skill: Управлять и контролировать процесс миграции.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
 levels:
 - intermediate
 roles:
-- developer
+- administrator
 products:
 - m365
 summary: |-
-  Деловой климат изменился. Люди хотят общаться без корпоративных барьеров. Компаниям нужны решения, которые были бы экономически эффективными и гибкими. Организации в качестве решения начинают настраивать гибридные среды и переносить контент в облако. В этом курсе вы узнаете, как развернуть и настроить SharePoint Server 2019, предназначенный для удовлетворения требований современных рабочих стилей. Вы также узнаете, как настраивать и управлять различными приложениями-службами SharePoint для подготовки к гибридному развертыванию. Затем изучите, как планировать и реализовывать гибридные сценарии SharePoint, которые обеспечивают удобство работы пользователей. Со временем вы узнаете, как спроектировать процесс переноса контента, а также доступные ресурсы и инструменты, используемые при переносе контента в SharePoint и OneDrive в Microsoft 365.
+  Деловой климат изменился. Люди хотят общаться без корпоративных барьеров. Компаниям нужны решения, которые были бы экономически эффективными и гибкими. Организации в качестве решения начинают настраивать гибридные среды и переносить содержимое в облако. В этом курсе вы узнаете, как развернуть и настроить SharePoint Server 2019, предназначенный для удовлетворения требований современных рабочих стилей. Вы также узнаете, как настраивать и управлять различными приложениями-службами SharePoint для подготовки к гибридному развертыванию. Затем изучите, как планировать и реализовывать гибридные сценарии SharePoint, которые обеспечивают удобство работы пользователей. Со временем вы узнаете, как спроектировать процесс переноса содержимого, а также доступные ресурсы и инструменты, используемые при переносе содержимого в SharePoint и OneDrive в Microsoft 365.
 
   #### Профиль аудитории
-  Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют локальной средой SharePoint и заинтересованы в развертывании гибридных сценариев и переносе контента в Microsoft 365.
+  Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют локальной средой SharePoint и заинтересованы в развертывании гибридных сценариев и переносе содержимого в Microsoft 365.
 prerequisitesSection: |-
   - Опыт работы с Windows PowerShell
   - Базовое понимание управления SQL Server
@@ -47,8 +49,8 @@ outlineSection: |-
   ### Модуль 1&#58; Инфраструктура SharePoint
   Этот модуль о фундаментальной инфраструктуре SharePoint. Он описывает компоненты в ферме SharePoint. Также обсуждается, как установить и настроить ферму SharePoint.
   #### Уроки
-  - План фермы SharePoint
-  - SharePoint 2019
+  - Планирование фермы SharePoint
+  - Обзор SharePoint Server 2019
   - Установка и управление фермой SharePoint
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -58,10 +60,10 @@ outlineSection: |-
   - Планировать резервное копирование и восстановление фермы
 
 
-  ### Модуль 2&#58; Аутентификация и безопасность SharePoint
+  ### Модуль 2&#58; Проверка подлинности и безопасность в SharePoint
   Этот модуль посвящен проверке подлинности и безопасности SharePoint. Он вводит различные методы проверки подлинности в SharePoint 2019.
   #### Уроки
-  - Планирование проверки подлинности
+  - Планирование аутентификации
   - Настройка федеративной аутентификации
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -71,12 +73,12 @@ outlineSection: |-
   - Объяснять концепции федеративного удостоверения
 
 
-  ### Модуль 3&#58; Управление контентом SharePoint Content Management
-  Этот модуль об управлении SharePoint Content Management. Здесь обсуждается структура контента в SharePoint. Он также предоставляет сведения об авторизации и доступе к контенту в SharePoint.
+  ### Модуль 3&#58; Управление содержимым SharePoint Content Management
+  Этот модуль об управлении SharePoint Content Management. Здесь обсуждается структура содержимого в SharePoint. Он также предоставляет сведения об авторизации и доступе к содержимому в SharePoint.
   #### Уроки
-  - Обзор структуры контента SharePoint
-  - Управление доступом к контенту
-  - Управление коллекциями сайтов
+  - Планирование узлов и семейств узлов
+  - Управление доступом к содержимому
+  - Настройка и управление семействами узлов
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Объяснять концепции семейства сайтов
@@ -89,9 +91,9 @@ outlineSection: |-
   ### Модуль 4&#58; Приложения-службы SharePoint
   Этот модуль посвящен приложениям и рабочим процессам SharePoint. В нем описано, как подготовить к работе приложение-службу BCS и приложение-службу User Profile, а также управлять ими. В частности, обсуждается, как импортировать и экспортировать модели BDC, а также как импортировать пользовательские свойства в SharePoint.
   #### Уроки
-  - Приложения-службы SharePoint и рабочий процесс
-  - Планирование и настройка Business Connectivity Services (BCS) и Secure Store
-  - Планирование и настройка профилей пользователей
+  - Сервисные приложения и рабочий процесс SharePoint
+  - Планирование и настройка службы BCS и Secure Store
+  - Планировать и настройка сервиса профилей пользователей
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Объяснять ключевые компоненты модели BDC
@@ -107,24 +109,24 @@ outlineSection: |-
   - Описывать, как планировать импорт и синхронизацию SharePoint Active Directory
 
 
-  ### Модуль 5&#58; Планирование и настройка управляемых метаданных
-  Этот модуль посвящен встроенным функциям, таким как служба управляемых метаданных, типы контента и наборы терминов, которые позволяют создавать и распространять информационную архитектуру. В нем слушатели узнают о необходимости создавать различные типы контента, а также о концепциях службы управляемых метаданных, включая таксономии, наборы терминов и корпоративные ключевые слова.
+  ### Модуль 5&#58; Планирование и настройка службы управляемых метаданных
+  Этот модуль посвящен встроенным функциям, таким как служба управляемых метаданных, типы содержимого и наборы терминов, которые позволяют создавать и распространять информационную архитектуру. В нем слушатели узнают о необходимости создавать различные типы содержимого, а также о концепциях службы управляемых метаданных, включая таксономии, наборы терминов и корпоративные ключевые слова.
   #### Уроки
-  - Управление типами содержимого
-  - Управляемые метаданные
-  - Настройка службы управляемых метаданных
+  Управление типами содержимого
+  - Обзор службы управляемых метаданных
+  - Настройка службу управляемых метаданных
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Объяснять функции и использование типов контента
+  - Объяснять функции и использование типов содержимого
   - Описывать функции службы управляемых метаданных
-  - Объяснять, как создавать и публиковать типы контента в семействах сайтов
+  - Объяснять, как создавать и публиковать типы содержимого в семействах сайтов
   - Определять возможности службы управляемых метаданных
   - Создавать и управлять группами терминов, наборами терминов и терминами
   - Настраивать наборы терминов и термины для управляемой навигации
 
 
   ### Модуль 6&#58; Планирование и настройка поиска
-  Этот модуль посвящен приложению-службе корпоративного поиска. Он содержит подробные сведения о планировании и настройке источников контента, расписаний сканирования и правил сканирования. Также обсуждается, как обеспечить управление поиском для ряда компонентов поиска, таких как правила запросов, типы результатов и шаблоны отображения.
+  Этот модуль посвящен приложению-службе корпоративного поиска. Он содержит подробные сведения о планировании и настройке источников содержимого, расписаний сканирования и правил сканирования. Также обсуждается, как обеспечить управление поиском для ряда компонентов поиска, таких как правила запросов, типы результатов и шаблоны отображения.
   #### Уроки
   - Планирование корпоративного поиска
   - Настройка корпоративного поиска
@@ -133,7 +135,7 @@ outlineSection: |-
   После завершения этого модуля студенты смогут следующее&#58;
   - Описывать функцию компонентов поиска
   - Объяснять, как планировать и настраивать топологию поиска
-  - Описывать, как планировать и настраивать источники контента
+  - Описывать, как планировать и настраивать источники содержимого
   - Описывать, как планировать и настраивать расписания сканирования
   - Описывать, как планировать и настраивать правила сканирования
   - Описывать управление схемой поиска
@@ -178,26 +180,28 @@ outlineSection: |-
   - Настраивать результаты гибридного поиска
 
 
-  ### Модуль 10&#58; Введение в миграцию
+  ### Модуль 10&#58; Планирование миграции содержимого
   Этот модуль предназначен для планирования процесса миграции в облако. Он содержит обзор ресурсов и инструментов, которые можно использовать в процессе миграции.
   #### Уроки
-  - Обзор миграции
-  - Использование FastTrack и партнерских услуг
+  - Обзор миграции содержимого
+  - Подготовка к миграции содержимого
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Планировать процесс миграции контента
+  - Планировать процесс миграции содержимого
   - Описывать доступные ресурсы и инструменты для использования в процессе миграции
 
 
-  ### Модуль 11&#58; Миграция в SharePoint Online
-  Этот модуль ориентирован на использование SharePoint Migration Tool (SPMT) для переноса контента в облако. В частности, в нем говорится о требованиях и ограничениях SPMT. В нем представлены разные методы миграции для разных источников данных, таких как общие папки и контент SharePoint.
+  ### Модуль 11&#58; Миграция содержимого в Microsoft 365
+  Этот модуль ориентирован на использование SharePoint Migration Tool (SPMT) для переноса содержимого в облако. В частности, в нем говорится о требованиях и ограничениях SPMT. В нем представлены разные методы миграции для разных источников данных, таких как общие папки и содержимое SharePoint.
   #### Уроки
-  - Подготовка к миграции
-  - Перенос контента в облако
-  - Управлять и контролировать процесс миграции
+  - Миграция содержимого с помощью SPMT
+  - Миграция содержимого с помощью Migration Manager
+  - Миграция содержимого с помощью Mover
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Получение доступа к данным, подлежащим миграции, с помощью средства оценки миграции SharePoint (SMAT)
-  - Переносить контент в облако с помощью SharePoint Migration Tool (SPMT)
+  - Переносить содержимое в облако с помощью SharePoint Migration Tool (SPMT)
+  - Переносить содержимое в облако с помощью Migration Manager
+  - Переносить содержимое в облако с помощью Mover
   - Управлять и контролировать процесс миграции
 
