--- a/learn-certs-pr/d365-business-central-functional-consultant-associate.yml
+++ b/learn-certs-pr/d365-business-central-functional-consultant-associate.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
-  description: Эта сертификация станет доступна в сентябре 2020 года. Функциональные консультанты Dynamics 365 Business Central отвечают за внедрение основных процессов настройки приложений для малого и среднего бизнеса.
+  description: Эта сертификация станет доступна в октябре 2020 года. Функциональные консультанты Dynamics 365 Business Central отвечают за внедрение основных процессов настройки приложений для малого и среднего бизнеса.
 uid: certification.d365-business-central-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -10,34 +10,41 @@ summary: |-
 
   Функциональные консультанты Dynamics 365 Business Central отвечают за внедрение основных процессов настройки приложений для малого и среднего бизнеса.
 
-  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в сентябре 2020 года.</strong></div>
-subTitle: Эта сертификация станет доступна в сентябре 2020 года. Функциональные консультанты Dynamics 365 Business Central отвечают за внедрение основных процессов настройки приложений для малого и среднего бизнеса.
+  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в октябре 2020 года.</strong></div>
+subTitle: Эта сертификация станет доступна в октябре 2020 года. Функциональные консультанты Dynamics 365 Business Central отвечают за внедрение основных процессов настройки приложений для малого и среднего бизнеса.
 levels:
 - intermediate
 skills:
-- Еще не доступно
+- Настройка Business Central
+- Настройка финансовых данных
+- Настройка продаж и закупок
+- Выполнение операций Business Central
 roles:
 - functional-consultant
 type: role-based
 products:
 - dynamics-business-central
 - power-platform
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSG
 exams:
 - uid: exam.mb-800
 resources:
+- title: Плакат с сертификацией
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Ft
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
-- title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
-  href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Поддержка по вопросам сертификации
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  href: help.md
 
