--- a/learn-certs-pr/d365-functional-consultant-manufacturing.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing.yml
@@ -2,14 +2,14 @@
 title: 'Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
-  description: 'Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing поуправлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.'
+  description: 'Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing по управлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.'
 uid: certification.d365-functional-consultant-manufacturing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing поуправлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.
-subTitle: 'Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing поуправлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.'
+  Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing по управлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.
+subTitle: 'Младший функциональный консультант Dynamics 365 Supply Chain Management, Manufacturing по управлению цепочками поставок, производством объединяет цифровые и физические системы; улучшает видимость, эффективность производства и гибкость; и снижает затраты для своих клиентов.'
 levels:
 - intermediate
 skills:
@@ -24,7 +24,7 @@ roles:
 - functional-consultant
 type: role-based
 products:
-- dynamics
+- dynamics-365
 - dynamics-finance-operations
 courses:
 - uid: course.mb-300t00
@@ -44,22 +44,25 @@ exams:
 - uid: exam.mb-300
 - uid: exam.mb-320
 resources:
-- title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35KLG
+- title: Плакат с сертификацией
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRH
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Обучение для получения сертификата
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBE
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
-- title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
-  href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Поддержка по вопросам сертификации
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  href: help.md
 
