--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -2,14 +2,14 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals'
-  description: 'Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (AI); гибридная реальность (MR);  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.'
+  description: 'Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (AI); гибридная реальность (MR); Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.'
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Этот экзамен позволяет оценить ваши знания в следующем&#58; Microsoft Dynamics 365; искусственный интеллект; гибридная реальность;  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.
-subTitle: 'Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (AI); гибридная реальность (MR);  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.'
+  Этот экзамен позволяет оценить ваши знания в следующем&#58; Microsoft Dynamics 365; искусственный интеллект; гибридная реальность; Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.
+subTitle: 'Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (AI); гибридная реальность (MR); Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.'
 levels:
 - beginner
 skills:
@@ -21,7 +21,7 @@ roles:
 - functional-consultant
 type: fundamentals
 products:
-- dynamics
+- dynamics-365
 courses:
 - uid: course.mb-901t00
 paths:
@@ -30,22 +30,25 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj
 exams:
 - uid: exam.mb-901
 resources:
-- title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Fundamentals.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
+- title: Плакат с сертификацией
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRV
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Обучение для получения сертификата
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBV
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
-- title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
-  href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Поддержка по вопросам сертификации
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  href: help.md
 
