--- a/learn-certs-pr/exams/70-486.yml
+++ b/learn-certs-pr/exams/70-486.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.70-486
 displayName: 70-486
 summary: |+
-  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
   <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
   </div>
 
@@ -19,7 +19,7 @@ summary: |+
   - Проектирование и развертывание в многоуровневых средах, включая Azure
   - Проектирование и разработка асинхронных решений
 
-  <div style='font-weight&#58; bold;'><br/>Обратите внимание&#58; Некоторые обновления экзамена вступят в силу с 15 января 2018 г. Чтобы узнать подробнее об этих изменениях и о том, как они влияют на оцениваемые навыки, пожалуйста, загрузите и ознакомьтесь с документом, описывающим изменения в Экзамене 486.</div>
+  <div><strong><br/>Примечание&#58; С 15 января 2018 года были введены некоторые обновления экзаменов. Чтобы узнать подробнее об этих изменениях и о том, как они влияют на оцениваемые навыки, пожалуйста, загрузите и ознакомьтесь с документом, описывающим изменения в Экзамене 486.</strong></div>
 subTitle: Кандидатами на прохождение этого экзамена являются профессиональные разработчики, которые используют Microsoft Visual Studio 2017 и ASP.NET для проектирования и разработки веб-решений. У кандидатов должен быть опыт разработки решений на базе Microsoft ASP.NET MVC не менее трех–пяти лет и они должны быть знакомы с веб-приложениями Microsoft Azure.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trkK
@@ -47,7 +47,8 @@ roles:
 products:
 - aspnet-core
 courses:
-- uid: course.20486
+- uid: course.20486-c
+- uid: course.20486-d
 relatedCertifications:
 - related:
     uid: certification.mcsa-web-applications-certification
@@ -55,7 +56,7 @@ relatedCertifications:
     uid: certification.mcsd-app-builder-certification
 resources:
 - title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
