--- a/learn-certs-pr/exams/70-487.yml
+++ b/learn-certs-pr/exams/70-487.yml
@@ -6,11 +6,11 @@ metadata:
 uid: exam.70-487
 displayName: 70-487
 summary: |+
-  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  <div><div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>
   </div>
 
-  ‘Кандидатами на получение этой сертификации являются профессиональные разработчики, которые используют Visual Studio 2017 и Microsoft® .NET Core Framework для проектирования и разработки веб-решений. У кандидатов должен быть опыт разработки решений на базе ASP.NET MVC не менее трех–пяти лет. Кроме того, кандидаты должны продемонстрировать следующее&#58;
+  Кандидатами на получение этой сертификации являются профессиональные разработчики, которые используют Visual Studio 2017 и Microsoft® .NET Core Framework для проектирования и разработки веб-решений. У кандидатов должен быть опыт разработки решений на базе ASP.NET MVC не менее трех–пяти лет. Кроме того, кандидаты должны продемонстрировать следующее&#58;
   - Опыт проектирования и разработки веб-приложений, которые получают доступ к различными (локальным и удаленным) данным и службам, включая Windows Azure
   - Опыт участия в полном жизненном цикле разработки ПО для решений в отношении данных и служб
   - Опыт проектирования и развертывания в многоуровневых средах, включая Windows Azure
@@ -41,13 +41,14 @@ roles:
 products:
 - azure
 courses:
-- uid: course.20487
+- uid: course.20487-c
+- uid: course.20487-d
 relatedCertifications:
 - related:
     uid: certification.mcsd-app-builder-certification
 resources:
 - title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
