--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -7,8 +7,8 @@ uid: exam.dp-200
 displayName: DP-200
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 31 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 31 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются инженеры по обработке данных Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для реализации решений по работе с данными, использующих службы данных Azure.
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 31 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Содержание этого экзамена было обновлено 31 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Внедрение решений для хранения данных (40-45%)
 - Управление и развитие обработки данных (25-30%)
 - Мониторинг и оптимизация решений по работе с данными (30-35%)
