--- a/learn-certs-pr/exams/mb2-716.yml
+++ b/learn-certs-pr/exams/mb2-716.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.mb-2-716
 displayName: MB2-716
 summary: |-
-  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
   <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  <div><strong>Содержание этого экзамена было обновлено 4 ФЕВРАЛЯ 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></div><br/>
   </div>
 
   Этот экзамен сдают лица, желающие получить сертификацию по Microsoft Dynamics 365 Customization and Configuration. Как правило, это разработчики, консультанты по внедрению, специалисты службы технической поддержки и системные администраторы. Они оценивают бизнес-требования заказчиков и выполняют установку и настройку приложения.
-
-  <div style='font-weight&#58; bold;'><br/>4 февраля 2020 года этот экзамен был обновлен. Чтобы узнать подробнее об этих изменениях и о том, как они влияют на оцениваемые навыки, пожалуйста, загрузите и ознакомьтесь с документом, описывающим изменения в Экзамене MB2-716.</div>
 subTitle: Этот экзамен сдают лица, желающие получить сертификацию по Microsoft Dynamics 365 Customization and Configuration. Как правило, это разработчики, консультанты по внедрению, специалисты службы технической поддержки и системные администраторы. Они оценивают бизнес-требования заказчиков и выполняют установку и настройку приложения.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o2AP
@@ -36,7 +36,7 @@ relatedCertifications:
     uid: certification.mcse-business-applications
 resources:
 - title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
