--- a/learn-certs-pr/exams/mo-100.yml
+++ b/learn-certs-pr/exams/mo-100.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.mo-100
 displayName: MO-100
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Эта Экзамен охватывает способность создавать и вести профессионально выглядящие отчеты, многоколоночные информационные бюллетени, резюме и деловую корреспонденцию. Предполагается, что кандидаты продемонстрируют правильное применение основных функций Word и выполнят задачи самостоятельно.
 subTitle: Этот экзамен оценивает способность правильно применять основные функции Word путем создания и редактирования документов для различных целей. Экзамен охватывает способность создавать и вести профессионально выглядящие отчеты, многоколоночные информационные бюллетени, резюме и деловую корреспонденцию.
@@ -28,6 +28,10 @@ locales:
 - fr
 - it
 - pt-br
+- pl
+- el-gr
+- zh-cn
+- zh-tw
 levels:
 - intermediate
 skills:
