--- a/learn-certs-pr/exams/mo-101.yml
+++ b/learn-certs-pr/exams/mo-101.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.mo-101
 displayName: MO-101
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Экзамен также оценивает умение и способность настраивать среды Word для удовлетворения потребностей проекта и повышения производительности. К документам экспертного уровня можно отнести бизнес-планы, научные документы, книги, специализированные брошюры и массовые рассылки. Предполагается, что кандидаты продемонстрируют правильное применение основных функций Word на уровне экспертов и выполнят задачи самостоятельно.
 subTitle: Этот экзамен позволяет оценить умение создавать и управлять профессиональными документами для различных специализированных целей и ситуаций. Экзамен также оценивает умение и способность настраивать среды Word для удовлетворения потребностей проекта и повышения производительности. К документам экспертного уровня можно отнести бизнес-планы, научные документы, книги, специализированные брошюры и массовые рассылки.
@@ -17,6 +17,7 @@ providers:
   examUrl: http://www.certiport.com/locator
 locales:
 - en
+- es-mx
 levels:
 - intermediate
 skills:
