--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -7,8 +7,8 @@ uid: exam.ms-900
 displayName: MS-900
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 8 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 8 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Этот экзамен направлен на кандидатов, желающих продемонстрировать фундаментальные - уровне знания нюансов и преимуществ в использовании облачных сервисов в целом и использовании модели Software as a Service (SaaS). Кандидаты должны знать об имеющихся возможностях и преимуществах, полученных благодаря внедрению облачных сервисов Microsoft 365.
@@ -23,6 +23,11 @@ practiceTestUrl: https://us.mindhub.com/p/MU-MS-900?utm_source=microsoft&utm_med
 locales:
 - en
 - ja
+- es
+- de
+- zh-cn
+- fr
+- ko
 providers:
 - providerType: pearson-vue
   examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-900&examname=Exam%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-900
@@ -47,7 +52,10 @@ products:
 courses:
 - uid: course.ms-900t01
 paths:
-- uid: learn-m365.microsoft-365-fundamentals
+- uid: learn.wwl.m365-productivity-teamwork-solutions
+- uid: learn.wwl.m365-business-management-solutions
+- uid: learn.wwl.m365-security-compliance-capabilities
+- uid: learn.wwl.m365-licensing-service-support
 relatedCertifications:
 - related:
     uid: certification.microsoft-365-fundamentals
