--- a/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations.yml
+++ b/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations.yml
@@ -4,14 +4,20 @@ metadata:
   title: 'MCSA: Microsoft Dynamics 365 for Operations'
   description: 'MCSA: Microsoft Dynamics 365 for Operations'
 uid: certification.mcsa-microsoft-dynamics-365-for-operations
-iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
+iconUrl: /media/learn/certification/badges/mcsa-badge.svg
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
   <div><strong>Данная сертификация будет аннулирована 31 января 2021 года. Вы больше не сможете получить данный сертификат после этой даты. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в <a href='https://www.microsoft.com/learning/dashboard.aspx'>панели Сертификации</a>. Вы также можете <a href='/learn/certifications/retired-certifications'>просмотреть все отмененные сертификации</a>.</strong><br/><br/></div>.
   </div>
 
   Эта сертификация подтверждает ваши навыки работы с технологиями Microsoft Dynamics 365 для выполнения основных задач, связанных с пользовательской настройкой Microsoft Dynamics 365 for Operations. Обычно в состав аудитории входят технические консультанты, программисты и ИТ-специалисты.
+
+  Для получения сертификации MCSA&#58; Microsoft Dynamics 365 for Operations необходимо выполнить следующие требования&#58;
+  - Сдать экзамен [MB6-894&#58; Разработка, расширения и развертывание для Microsoft Dynamics 365 Finance](/learn/certifications/exams/mb6-894)
+  - И сдать один из следующих экзаменов&#58;
+    - [70-764&#58; Администрирование SQL Database Infrastructure](/learn/certifications/exams/70-764)
+    - [70-765&#58; Инициализация баз данных SQL](/learn/certifications/exams/70-765)
 subTitle: Эта сертификация подтверждает ваши навыки работы с технологиями Microsoft Dynamics 365 для выполнения основных задач, связанных с пользовательской настройкой Microsoft Dynamics 365 for Operations. Обычно в состав аудитории входят технические консультанты, программисты и ИТ-специалисты.
 levels:
 - intermediate
@@ -31,16 +37,16 @@ exams:
 - uid: exam.mb-6-894
 resources:
 - title: Руководство по образовательным курсам и сертификациям
-  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
+  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
-  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
