--- a/learn-certs-pr/mcse-business-applications.yml
+++ b/learn-certs-pr/mcse-business-applications.yml
@@ -7,25 +7,23 @@ uid: certification.mcse-business-applications
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
   <div><strong>Данная сертификация будет аннулирована 31 января 2021 года. Вы больше не сможете получить данный сертификат после этой даты. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в <a href='https://www.microsoft.com/learning/dashboard.aspx'>панели Сертификации</a>. Вы также можете <a href='/learn/certifications/retired-certifications'>просмотреть все отмененные сертификации</a>.</strong><br/><br/></div>.
   </div>
 
   Этот сертификат подтверждает ваши навыки работы с технологиями Microsoft Dynamics 365. Начав с основ Microsoft Dynamics 365, вы можете продолжить обучение, углубившись в определенную сферу деятельности.
 
-  Чтобы получить сертификат MCSE&#58; Business Applications, сдайте один из следующих экзаменов&#58;
-  - [MB2-716&#58; Microsoft Dynamics 365 Customization and Configuration](/learn/certifications/exams/mb2-716)
-  - [MB2-718&#58; Microsoft Dynamics 365 for Customer Service](/learn/certifications/exams/mb2-718)
-  - [MB2-719&#58; Microsoft Dynamics 365 for Marketing](/learn/certifications/exams/mb2-719)
-  - [MB6-895&#58; Financial Management in Microsoft Dynamics 365 for Finance and Operations](/learn/certifications/exams/mb6-895)
-  - [MB6-896&#58; Distribution and Trade in Microsoft Dynamics 365 for Finance and Operations](/learn/certifications/exams/mb6-896)
-  - [MB6-897&#58; Microsoft Dynamics 365 for Retail](/learn/certifications/exams/mb6-897)
-  - [MB6-898&#58; Microsoft Dynamics 365 for Talent](/learn/certifications/exams/mb6-898)
+  Для получения сертификации MCSE&#58; Business Applications необходимо выполнить следующие требования&#58;
+  - Получить один обязательный сертификат&#58; [MCSA&#58; Microsoft Dynamics 365 for Operations](/learn/certifications/mcsa-microsoft-dynamics-365-for-operations)
+  - И сдать один из экзаменов на выбор&#58;
+    - [MB2-716&#58; Microsoft Dynamics 365 Customization and Configuration](/learn/certifications/exams/mb2-716)
+    - [MB6-897&#58; Microsoft Dynamics 365 for Retail](/learn/certifications/exams/mb6-897)
+    - [MB6-898&#58; Microsoft Dynamics 365 for Talent](/learn/certifications/exams/mb6-898)
 subTitle: Этот сертификат подтверждает ваши навыки работы с технологиями Microsoft Dynamics 365. Начав с основ Microsoft Dynamics 365, вы можете продолжить обучение, углубившись в определенную сферу деятельности.
 levels:
 - beginner
 skills:
-- не требуется
+- none
 roles:
 - business-analyst
 type: mcse
@@ -35,6 +33,9 @@ exams:
 - uid: exam.mb-2-716
 - uid: exam.mb-6-897
 - uid: exam.mb-6-898
+prerequisites:
+- uid: certification.mcsa-microsoft-dynamics-365-for-operations
+  isOptional: false
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
@@ -42,7 +43,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
