--- a/learn-certs-pr/mcse-productivity-certification.yml
+++ b/learn-certs-pr/mcse-productivity-certification.yml
@@ -8,15 +8,15 @@ iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Этот будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. Вы больше не сможете получить данный сертификат после этой даты. Узнайте больше о <a href='/learn/certifications/retired-certifications'>предстоящих отменах экзаменов</a>.</strong><br/><br/></div>
+  <div><strong>Этот будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. Вы больше не сможете получить данный сертификат после этой даты. Узнайте больше о <a href='/learn/certifications/retired-certifications'>предстоящих отменах сертификация</a>.</strong><br/><br/></div>
   </div>
 
   Данная сертификация подтверждает, что у его обладателя есть все необходимые навыки для переноса работы компании в среду облачных вычислений, повышения производительности труда пользователей и расширения их возможностей, сокращения потерь данных и повышения уровня их защиты в масштабе организации. Эта сертификация может использоваться для удовлетворения одного из требований, чтобы стать [Администратором-экспертом Microsoft 365 Certified Enterprise](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx)
 
-  Чтобы стать MCSE Productivity Solutions Expert, выполните следующие требования&#58;
-  - Получите одну обязательную сертификацию
-    - Пример обязательной сертификации1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
-    - Пример обязательной сертификации2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
+  Для того, чтобы получить сертификат эксперта MCSE Productivity Solutions Expert необходимо выполнить следующие требования&#58;
+  - Получить один обязательный сертификат&#58;
+    - Пример обязательной сертификации 1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
+    - Пример обязательной сертификации 2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
   - И сдать один из экзаменов на выбор
     - [70-333&#58; Deploying Enterprise Voice with Skype for Business 2015](/learn/certifications/exams/70-333)
     - [70-334&#58; Core Solutions of Microsoft Skype for Business](/learn/certifications/exams/70-334)
@@ -29,7 +29,7 @@ skills:
 - none
 roles:
 - administrator
-type: role-based
+type: mcse
 products:
 - m365
 courses:
