--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Эта сертификация станет доступна в октябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  description: Эта сертификация станет доступна в сентябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -10,16 +10,16 @@ summary: |-
 
   Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений. Они должны иметь практический опыт, используя инструменты производителя Power Platform для создания решений, использующих Power Platform и Microsoft 365. Сертифицированные функциональные консультанты должны обладать навыками моделирования данных, проектирования пользовательского интерфейса, анализа требований и анализа процессов.
 
-  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в октябре 2020 года.</strong></div>
-subTitle: Эта сертификация станет доступна в октябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  <div><br/><strong>Примечание&#58; Эта сертификация станет доступна в сентябре 2020 года.</strong></div>
+subTitle: Эта сертификация станет доступна в сентябре 2020 года. Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
 levels:
 - intermediate
 skills:
 - Настройка общих служб данных
-- Создание Power App
-- Создание автоматизации с помощью Power Automate
-- Настройка виртуальных агентов Power Virtual Agents
-- Создание визуализации с помощью Power BI
+- Создание приложений с помощью Power Apps
+- Создание и управление Power Automate
+- Внедрение чат-ботов Power Virtual Agents
+- Интеграция Power Apps с другими приложениями и службами
 roles:
 - business-analyst
 - developer
@@ -34,22 +34,26 @@ products:
 - power-platform
 - office-teams
 - power-virtual-agents
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4D1eL
 exams:
 - uid: exam.pl-200
 resources:
+- title: Плакат с сертификацией
+  description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjH
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Плакат с сертификацией
-  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
-- title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
-  href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Поддержка по вопросам сертификации
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  href: help.md
 
